# ng-dummy

./: .gitattributes  .gitignore  COPYRIGHT  Makefile  Makefile.am  Makefile.in  README.md  config.js  configure  configure.ac  daemon.js  logger.js  migrate  migrate-my  morgan.js  package-lock.json  package.json  pg-seed.sql  server.js  session.js  spec.js  work.php
app/: index.php  routes.php
backend/: .gitignore  Makefile  Makefile.am  Makefile.in  config.js  csv2knex.js  daemon.js  exconfig.js  exconfig.js.in  exdaemon.js  exdir.js  exlog.js  expid.js  expresso  expresso.in  exserv.js  exserv.js.jrpc  jclient.js  knexfile.js  knexport.js  knexwork2.js  knexwork4.js  knexwrk7.js  lorem  lorem.conf  lorem.conf.in  lorem.in  lorem.json  lorem.json.in  package-lock.json  package.json  seq-set.sql  serv.js  server.crt  server.js  server.key  spec.js  tools.js  tsconfig.json  users.js  (+2 more)
backend-express/: Makefile.in  knexport1.js  knexwork6.js  knexwork8.js  lorem.conf.in  lorem.in  package-lock.json  package.json
backend/migrations/: 20181020094820.js  20181214085626_stable.js
backend/models/: customers.js  data.js  domains.js  driver-files.js  drivers.js  files.js  login.js  superusers.js  users.js  vehicle-files.js
backend/plugins/: cors.js
backend/public/: app.css  app.css.map  app.js  app.js.map  index.html
backend/public.prod/: index.html  main.js  polyfills.js  scripts.js  styles.css  vendor.js
backend/rc.d/: lorem  lorem.in  wcm  wcm.in
backend/routers/: customers.js  data.js  domains.js  driver-files.js  exrouter.js  files.js  login.js  router.js  rpc.js  superusers.js  upload.js  users.js  vehicle-files.js
backend/seeds/: 20181214085527_customers.js  20181214085527_users.js  20190109010326__connections.js  20190109010326__drivers.js  20190109010326__users.js  20190109010326__vehicles.js  _connections.js  _relations.js  _superusers.js  _users.js  users.js
backend/src/: server.js  session.js
backend/src/models/: data.js  drivers.js  login.js  users.js  vehicles.js
backend/src/routers/: drivers.js  login.js  users.js  vehicles.js
backend/utils/: daemon.js  exdaemon.js  exlog.js  exmkdir.js  expid.js  exsig.js  logger.js  mkdir.js  pid.js
dev/: .gitignore  pg-seed.sql  rename-component.sh
front/: angular.json  package-lock.json  package.json  tsconfig.json  tsconfig.json.orig  worker.patch
front.adv/: angular.json  package-lock.json  pkread.js  tsconfig.json
front.fz/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/: Makefile  Makefile.am  Makefile.in  angular.json  babel.config.js  class.ts  ngsw-config.json  package-lock.json  package.json  pkread.js  postcss.config.js  tsconfig.json  webpack.config.js
frontend/src/: App.html  App.vue  Login.vue  Makefile  Makefile.am  Makefile.in  NotFound.vue  Users.html  Users.vue  app.html  app.scss  app.ts  app.vue  client.ts  foundation.d.ts  foundation.js  index.html  loading.scss  lodash.ts  main.scss  main.ts  router.ts  store.ts  vue.d.ts
frontend/src/app/: api.interceptor.ts  app.animations.ts  app.module.ts  css.utils.ts  customers.service.ts  drivers-filter.pipe.ts  drivers.service.ts  login.service.ts  notices.service.ts  pages.guard.ts  pretty-code.pipe.ts  routing.module.ts  rpc.service.ts  update.service.ts  upload.service.ts
frontend/src/app/app-container/: app-container.component.html  app-container.component.ts
frontend/src/app/app-header/: app-header.component.html  app-header.component.ts
frontend/src/app/customers/: customers.component.html  customers.component.ts
frontend/src/app/directives/: trim.directive.ts
frontend/src/app/driver-card/: driver-card.component.html  driver-card.component.ts
frontend/src/app/driver-create/: driver-create.component.html  driver-create.component.ts
frontend/src/app/driver-drop/: driver-drop.component.html  driver-drop.component.ts
frontend/src/app/driver-update/: driver-update.component.ts
frontend/src/app/drivers/: drivers.component.html  drivers.component.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/models/: customer.model.ts  driver-file.model.ts  driver.model.ts  user.model.ts  vehicle.model.ts
frontend/src/app/notifier/: notifier.component.html  notifier.component.scss  notifier.component.ts
frontend/src/app/page-nav/: page-nav.component.ts
frontend/src/app/uploader/: uploader.component.html  uploader.component.ts
frontend/src/app/user-create/: user-create.component.html  user-create.component.ts
frontend/src/app/user-drop/: user-drop.component.html  user-drop.component.ts
frontend/src/app/user-update/: user-update.component.html  user-update.component.ts
frontend/src/app/users/: users.component.html  users.component.ts
frontend/src/app/vehicle-create/: vehicle-create.component.html  vehicle-create.component.ts
frontend/src/app/vehicle-drop/: vehicle-drop.component.ts
frontend/src/app/vehicle-update/: vehicle-update.component.ts
frontend/src/app/vehicles/: vehicles.component.html
frontend/src/components/: Domains.html  Domains.vue  Login.html  Login.vue  NotFound.vue  PageNav.html  PageNav.vue  SuperUsers.html  SuperUsers.vue  Users.css  Users.html  Users.vue  app-footer.html  app-footer.vue  app-header.html  app-header.vue  domains.html  domains.vue  login-header.html  login.html  login.vue  not-found.vue  page-nav-mixin.ts  page-nav.vue  super-users.html  super-users.vue  users.vue
frontend/src/components/mixins/: sort-records-mixin.ts
frontend/src/environments/: environment.prod.ts
frontend/src/locale/: messages.ru.xlf
frontend/src/modules/: login.ts
frontend/src/plugins/: client.ts  foundation.js.new  foundation.ts  lodash.ts
frontend/src/scss/: _arrows.scss  _fs.scss  _my.scss
frontendv1/: Makefile  Makefile.am  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontendv2/: babel.config.js  package-lock.json  package.json  webpack.config.js
frontendv3/: README.md  angular.json  package-lock.json  package.json
(+301 files in other folders)
